--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  color: var(--tg-theme-text-color);
-  background: var(--tg-theme-bg-color);
+  color: white;
+  background-color: #414141;
   font-family: "New Amsterdam", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -12,6 +12,33 @@ header {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+main .AccountScreen {
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 150px;
+}
+main .substrictionScreen {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 70px;
+}
+main .substrictionScreen button {
+  margin: 0 auto;
+  margin-top: 40px;
+  width: 120px;
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid #004b04;
+  color: white;
+  background-color: #00b409;
+  cursor: pointer;
+}
+main .substrictionScreen button:hover {
+  background-color: #029c0a;
 }
 
 footer {
@@ -27,8 +54,15 @@ footer .screen1Footer {
 }
 footer .screen1Footer button {
   width: 100%;
-  height: 100%;
+  height: 90%;
   margin-left: 20px;
   margin-right: 20px;
-  border-radius: 50%;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #070f38;
+  border: 1px solid #00b7ff;
+}
+footer .screen1Footer button:hover {
+  background-color: #0a1964;
 }/*# sourceMappingURL=style.css.map */
